--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGODB_URL = mongodb://127.0.0.1:27017/pos
 
 TOKEN_SECRET_KEY = "FSDKBCDSAJJHKSAFJLJJWEOTUIWCZMLAPO"
 
-FRONTEND_URL= https://pos-git-main-md-habibur-rahmans-projects-687178f7.vercel.app/
+FRONTEND_URL= https://pos-eta-tan.vercel.app/
